# crypto-backtest-system

./: CMakeLists.txt  conanfile.txt  config.json  doc.md  gmon.out  readme.md  todo.md
include/: alpha.hpp  backtest.hpp  client.hpp  configparser.hpp  dataparser.hpp  datatypes.hpp  report.hpp  ta-function.hpp
misc/scrap-scripts/: data-formalizer.cpp
report/: balance-demo_algo-BTCUSDT-1s-03-12-2024.csv  trades-demo_algo-BTCUSDT-1s-03-12-2024.csv
scripts/: build_and_dont_run.sh  build_and_run.sh
source/: main.cpp
source/alpha/: alpha.cpp
source/runner/: backtest.cpp
source/utils/: configparser.cpp  dataparser.cpp  report.cpp
